src/test/deca/context/valid/var-sameAsField.deca
class A{
    int x;
    void f() {
        Object x;
    }
}
