src/test/deca/context/invalid/declMethod-doubleDeclaration.deca
class A {
    int bob;

    void coco(){
    }

    int coco(){
    }
}